--- a/main.html
+++ b/main.html
@@ -5,19 +5,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
-    <body id="grid">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-      <div>7</div>
-      <div>8</div>
-      <div>9</div>
-      <div>10</div>
-    </body>
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+	<body id="grid">
+        <div class="grid-container">
+        <div class="item1">Header</div>
+        <div class="item2">Sidebar</div>
+        <div class="item3">Main Content</div>
+        <div class="item4">Footer</div>
+        <div class="item5">Header</div>
+        <div class="item6">Sidebar</div>
+        <div class="item7">Main Content</div>
+        <div class="item8">Footer</div>
+       <div class="item9">Header</div>
+       <div class="item10">Sidebar</div>
+    </div>
+
+</body>
 </html>
