--- a/main.html
+++ b/main.html
@@ -7,16 +7,16 @@
 
 	<body id="grid">
         <div class="grid-container">
-        <div class="item1">Header</div>
-        <div class="item2">Sidebar</div>
-        <div class="item3">Main Content</div>
-        <div class="item4">Footer</div>
-        <div class="item5">Header</div>
-        <div class="item6">Sidebar</div>
-        <div class="item7">Main Content</div>
-        <div class="item8">Footer</div>
-       <div class="item9">Header</div>
-       <div class="item10">Sidebar</div>
+        <div class="item1">1</div>
+        <div class="item2">2</div>
+        <div class="item3">3</div>
+        <div class="item4">4</div>
+        <div class="item5">4</div>
+        <div class="item6">6</div>
+        <div class="item7">7</div>
+        <div class="item8">8</div>
+       <div class="item9">9</div>
+       <div class="item10">10</div>
     </div>
 
 </body>
